# promptemon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  utils.py
templates/: battle.html  index.html  lose.html  new_promptemon.html  win.html
